@@ -150,4 +150,30 @@ NAbelianGroup* NLayeredLensSpace::getHomologyH1() const {
     return ans;
 }
 
+std::ostream& NLayeredLensSpace::writeName(std::ostream& out) const {
+    if (p == 3 && q == 1) {
+        out << "L(3,1)";
+        if (torus->getNumberOfTetrahedra() != 2)
+            return out;
+        else if (isSnapped())
+            return out << " (1)";
+        else
+            return out << " (2)";
+    } else
+        return out << "L(" << p << ',' << q << ')';
+}
+
+std::ostream& NLayeredLensSpace::writeTeXName(std::ostream& out) const {
+    if (p == 3 && q == 1) {
+        out << "$L_{3,1}";
+        if (torus->getNumberOfTetrahedra() != 2)
+            return out << '$';
+        else if (isSnapped())
+            return out << "^{(1)}$";
+        else
+            return out << "^{(2)}$";
+    } else
+        return out << "$L_{" << p << ',' << q << "}$";
+}
+
 } // namespace regina
