@@ -10,6 +10,7 @@ Compilation:
 
 Runtime:
     Automatically load libraries from a configuration file.
+    Support passing an argument representing a file to run.
 
 Wrappers:
     split
