@@ -11,5 +11,5 @@ CXXFLAGS = @CXXFLAGS_NODEBUG@
 
 noinst_LTLIBRARIES = libsubcomplex.la
 
-libsubcomplex_la_SOURCES = naugtrisolidtorus.cpp nlayeredchain.cpp nlayeredchainpair.cpp nlayeredlensspace.cpp nlayeredloop.cpp nlayeredsolidtorus.cpp npillowtwosphere.cpp nplugtrisolidtorus.cpp nsnappedball.cpp nsnappedtwosphere.cpp nspiralsolidtorus.cpp nstandardtri.cpp ntrisolidtorus.cpp pysubcomplex.cpp
+libsubcomplex_la_SOURCES = naugtrisolidtorus.cpp nl31pillow.cpp nlayeredchain.cpp nlayeredchainpair.cpp nlayeredlensspace.cpp nlayeredloop.cpp nlayeredsolidtorus.cpp npillowtwosphere.cpp nplugtrisolidtorus.cpp nsnappedball.cpp nsnappedtwosphere.cpp nspiralsolidtorus.cpp nstandardtri.cpp ntrisolidtorus.cpp pysubcomplex.cpp
 
